# libusbgx

./: .gbs.conf  .gitignore  AUTHORS  ChangeLog  INSTALL  LibUsbgxConfig.cmake.in  Makefile.am  README  acinclude.m4  configure.ac  doxygen.cfg  doxygen.cfg.in  install-headers.sh  libgadget.pc.in  libusbg.pc.in  libusbgx.pc.in  meson.build  meson_options.txt
doc/: gadget_schemes.txt  tests_guideline.txt
examples/: Makefile.am  gadget-acm-ecm.c  gadget-export.c  gadget-ffs.c  gadget-hid.c  gadget-import.c  gadget-midi.c  gadget-ms.c  gadget-printer.c  gadget-rndis-os-desc.c  gadget-uac2.c  gadget-uvc.c  gadget-vid-pid-remove.c  meson.build  show-gadgets.c  show-udcs.c
include/gadget/: gadget.h
include/usbg/: usbg.h  usbg_internal.h  usbg_internal_libconfig.h  usbg_internal_none.h  usbg_version.h.in
include/usbg/function/: 9pfs.h  ffs.h  hid.h  loopback.h  midi.h  ms.h  net.h  phonet.h  printer.h  serial.h  uac2.h  uvc.h
packaging/: libusbgx.manifest  libusbgx.spec
src/: Makefile.am  gadget.c  meson.build  usbg.c  usbg_common.c  usbg_common_libconfig.c  usbg_error.c  usbg_schemes_libconfig.c  usbg_schemes_none.c
src/function/: 9pfs.c  ether.c  ffs.c  hid.c  loopback.c  midi.c  ms.c  phonet.c  printer.c  serial.c  uac2.c  uvc.c
tests/: Makefile.am  header_checker.cpp  meson.build  test.c  test.sh  usbg-io-wrappers.c  usbg-test.c  usbg-test.h
