bin_PROGRAMS = show-gadgets gadget-acm-ecm gadget-vid-pid-remove gadget-ffs gadget-export gadget-import show-udcs gadget-ms
gadget_acm_ecm_SOURCES = gadget-acm-ecm.c
show_gadgets_SOURCES = show-gadgets.c
gadget_vid_pid_remove_SOURCES = gadget-vid-pid-remove.c
gadget_ffs_SOURCES = gadget-ffs.c
gadget_export_SOURCE = gadget-export.c
gadget_import_SOURCE = gadget-import.c
show_udcs_SOURCE = show-udcs.c
AM_CPPFLAGS=-I$(top_srcdir)/include/
AM_LDFLAGS=-L../src/ -lusbgx
