executable('show-gadgets', 'show-gadgets.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-acm-ecm', 'gadget-acm-ecm.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-vid-pid-remove', 'gadget-vid-pid-remove.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-ffs', 'gadget-ffs.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-export', 'gadget-export.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-import', 'gadget-import.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-rndis-os-desc', 'gadget-rndis-os-desc.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-printer', 'gadget-printer.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-ms', 'gadget-ms.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-midi', 'gadget-midi.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-hid', 'gadget-hid.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-uac2', 'gadget-uac2.c', dependencies: [ libusbgx_dep ], install: true)
executable('gadget-uvc', 'gadget-uvc.c', dependencies: [ libusbgx_dep ], install: true)
executable('show-udcs', 'show-udcs.c', dependencies: [ libusbgx_dep ], install: true)
